fix extra white space

--- a/src/acode.css
+++ b/src/acode.css
@@ -37,9 +37,14 @@
     -webkit-appearance: none;
 }
 
-body {
+html, body {
+    width: 100%;
+    height: 100%;
     background-color: var(--bg);
     opacity: 0;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 main {
@@ -1669,7 +1674,7 @@ img.footerIsotype {
 
     button,
     a.button,
-    input[type="submit"]{
+    input[type='submit']{
         width: auto;
     }
 
